<resources>
    <string name="app_name">Pos Unipar - Sistema</string>
    <string name="ra">Ra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dtNasc">Dt. nascimento</string>
    <string name="dtMatricula">Dt. matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>
    <string name="selecioneCurso">Selecione o curso</string>
    <string name="selecionePeriodo">Selecione o período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="alunos">Alunos</string>
    <string name="professores">Professores</string>
    <string name="diciplinas">Diciplinas</string>
    <string name="turmas">Turmas</string>
    <string name="frequencia">Frequencia</string>
    <string name="appBarMainActivity">Menu</string>
    <string name="appBarListAlunosActivity">Menu alunos</string>
    <string name="appBarListCursosActivity">Menu curso</string>
    <string name="appBarCadastroAlunoActivity">Aluno</string>
    <string name="appBarCadastroCursoActivity">Curso</string>
    <string name="notas">Notas</string>
    <string name="limparBancoDados">Limpar banco de dados</string>
    <string name="gerarDadosFake">Gerar dados fake</string>
    <string name="id">ID</string>
    <string name="deletar">Deletar</string>
    <string name="appBarCadastroProfessorActivity">Professor</string>
    <string name="appBarListProfessorActivity">Menu professor</string>
    <string name="professor">Professor</string>
    <string name="appBarListDiciplinaActivity">Menu diciplina</string>
    <string name="appBarCadastroDiciplinaActivity">Diciplina</string>
    <string name="qtdAlunos">Qtd. Alunos</string>
    <string name="qtdDiciplinas">Qtd. Diciplinas</string>
    <string name="regime">Regime</string>
    <string name="selecioneRegime">Selecione o regime</string>
    <string name="appBarListTurmaActivity">Menu turma</string>
    <string name="appBarCadastroTurmaActivity">Turma</string>
    <string name="gerenciarAlunos">Gerenciar alunos</string>
    <string name="gerenciarDiciplinas">Gerenciar diciplinas</string>
    <string name="aluno">Aluno</string>
    <string name="selecioneAluno">Selecione o aluno</string>
    <string name="selecioneDiciplina">Selecione a diciplina</string>
    <string name="appBarListNotaActivity">Menu nota</string>
    <string name="appBarCadastroNotaActivity">Nota</string>
    <string name="appBarCadastroFrequenciaActivity">Frequencia</string>
    <string name="appBarListFrequenciaActivity">Menu frequencia</string>
    <string name="selecioneTurma">Selecione uma turma</string>
    <string name="turma">Turma</string>
    <string name="diciplina">Diciplina</string>
    <string name="nota1">Nota 1</string>
    <string name="nota2">Nota 2</string>
    <string name="nota3">Nota 3</string>
    <string name="nota4">Nota 4</string>
    <string name="appBarListBoletimActivity">Menu boletim</string>
    <string name="boletim">Boletim</string>
    <string name="media">Media</string>
    <string name="aprovado">Aprovado</string>
</resources>