<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegarCursos"
        android:text="@string/cursos" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegarAlunos"
        android:text="@string/alunos" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegarProfessores"
        android:text="@string/professores" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegarDiciplinas"
        android:text="@string/diciplinas" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegarTurmas"
        android:text="@string/turmas" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegarFrequencia"
        android:text="@string/frequencia" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="navegarNotas"
        android:text="@string/notas" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="limparBancoDados"
        android:text="@string/limparBancoDados" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gerarValores"
        android:text="@string/gerarDadosFake" />


</LinearLayout>